[package]
name = "sobek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2", features = ["pure"] }
iced_aw = { version = "0.2", default-features = false, features = ["pure", "split", "tab_bar", "tabs", "modal", "card", "number_input"] }
dirs = "^4.0.0"
regex = "1"
native-dialog = "0.6.3"